# DiscreteZahlen

./: .gitignore  CMakeLists.txt  README.md  cw_1.c  main.c
.cache/clangd/index/: congruenceScene.c.60ED4B80B34DB9D3.idx  congruenceScene.h.F614FDD5951CD27A.idx  extendedEuc.c.D83567C3F29C95F7.idx  extendedEuc.h.8589476C7A63C32A.idx  extendedEucScene.c.72EC51735E95F7F9.idx  extendedEucScene.h.6384CF244A655528.idx  factorial.c.5F3E65E271993055.idx  factorial.h.01720DC672510EDC.idx  factorialScene.c.CF0145C0A3F79CF0.idx  factorialScene.h.EFC802492DE27052.idx  gameScene.c.6D9C0347C6C999FC.idx  gameScene.h.25C46E2D9C4A77C1.idx  gmock-actions.h.3666367518E0CD21.idx  gmock-all.cc.460CDF9590672201.idx  gmock-cardinalities.cc.E6C53E99C95677EA.idx  gmock-cardinalities.h.9018C91F1B9F7614.idx  gmock-function-mocker.h.035E30578EE0C8B6.idx  gmock-generated-actions.h.9ACDBF783AF566D8.idx  gmock-internal-utils.cc.E9E4B810282EE70B.idx  gmock-internal-utils.h.42F594AB63D917BE.idx  gmock-matchers.cc.BA9F8A2558C68AEC.idx  gmock-matchers.h.AC506558DCF1911A.idx  gmock-port.h.9BE25E26D857AEDC.idx  (+72 more)
src/: CMakeLists.txt  cw_1.c  gui  gui.c  gui.h  main.c  mainScene.c  mainScene.h  menu.c  menu.h  nwd  nwd.c  nwdScene.c  nwdScene.h  nwd_nww.c  nwd_nww.h  scenes.h  utils.c  utils.c.bak  utils.h  utils.h.bak
src/math/: CMakeLists.txt  extendedEuc.c  extendedEuc.h  factorial.c  factorial.h  nwd_nww.c  nwd_nww.h  sunziTheorem.c
src/math/include/: extendedEuc.h  factorial.h  nwd_nww.h  sunziTheorem.h
src/scenes/: extendedEucScene.c  extendedEucScene.h  mainScene.c  mainScene.h  nwdScene.c  nwdScene.h  other.c  other.h  scenes.h
src/scenes/congruence/: congruenceScene.c  congruenceScene.h  sunziTheoremScene.c  sunziTheoremScene.h
src/scenes/games/: gameScene.c  gameScene.h
src/scenes/games/snake/: dbOpener.c  dbOpener.h  pytania.txt  snake  snake.c  snake.h  snakeGame.c  snakeGame.h
src/scenes/other/: factorialScene.c  factorialScene.h
test/: CMakeLists.txt  nwd_nww_TEST.cpp  simpleTest.cpp
